test/JDBC/expected/BABEL-3818-vu-verify.out
-- Should throw unsupported feature error instead of crashing
alter table cities alter column region drop default defRegion
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'DROP DEFAULT' is not currently supported in Babelfish)~~


-- Should throw unsupported feature error
alter table cities alter column region varchar(50) drop default defRegion
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'DROP DEFAULT' is not currently supported in Babelfish)~~


-- Should throw syntax error
alter table cities alter region varchar(50) drop default defRegion
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'region' at line 2 and character position 25)~~


-- Should throw syntax error
alter table cities alter region drop default defRegion
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'region' at line 2 and character position 25)~~



-- Ensure alter table alter column: collate, not null, and null
-- still throw unsupported feature error
alter table cities alter column region varchar(25) collate test
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'COLLATE in ALTER TABLE ALTER COLUMN' is not currently supported in Babelfish)~~


alter table cities alter column region varchar(50) not null
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'NOT NULL in ALTER TABLE ALTER COLUMN' is not currently supported in Babelfish)~~


alter table cities alter column region varchar(50) null
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: 'NULL in ALTER TABLE ALTER COLUMN' is not currently supported in Babelfish)~~



